--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-OPENAI_API_KEY=*****
+APP_ENVIRONMENT="dev"
+APP_DEBUG=True
+
+APP_LOGGING__ROOT__LEVEL="DEBUG"
+APP_LOGGING__HANDLERS__CONSOLE__LEVEL="DEBUG"
+
+APP_OPENAI='{
+  "api_key": "*****"
+}'
