--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 APP_ENVIRONMENT="dev"
 APP_DEBUG=True
+APP_LANGUAGE="es"
 
 APP_LOGGING__ROOT__LEVEL="DEBUG"
 APP_LOGGING__HANDLERS__CONSOLE__LEVEL="DEBUG"
