support for bedrock

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,14 @@ APP_LOGGING__ROOT__LEVEL="DEBUG"
 APP_LOGGING__HANDLERS__CONSOLE__LEVEL="DEBUG"
 
 APP_OPENAI='{
-  "api_key": "*****"
+    "api_key": "*****"
+}'
+
+APP_BEDROCK='{
+    "chat": {
+        "model": "amazon.nova-micro-v1:0",
+        "region_name": "us-east-1"
+    },
+    "aws_access_key_id": "*****",
+    "aws_secret_access_key": "*****"
 }'
