--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 APP_ENVIRONMENT="dev"
 APP_DEBUG=True
 APP_LANGUAGE="es"
+APP_SECRET="**********"
 
 APP_LOGGING__ROOT__LEVEL="DEBUG"
 APP_LOGGING__HANDLERS__CONSOLE__LEVEL="DEBUG"
 
 APP_OPENAI='{
-    "api_key": "*****"
+    "api_key": "**********"
 }'
 
 APP_BEDROCK='{
@@ -14,6 +15,6 @@ APP_BEDROCK='{
         "model": "amazon.nova-micro-v1:0",
         "region_name": "us-east-1"
     },
-    "aws_access_key_id": "*****",
-    "aws_secret_access_key": "*****"
+    "aws_access_key_id": "**********",
+    "aws_secret_access_key": "**********"
 }'
