support for google models

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ APP_BEDROCK='{
     "aws_access_key_id": "**********",
     "aws_secret_access_key": "**********"
 }'
+
+APP_GOOGLE='{
+    "api_key": "**********"
+}'
