--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,12 @@ APP_BEDROCK='{
 APP_GOOGLE='{
     "api_key": "**********"
 }'
+
+APP_HUGGINGFACE='{
+    "chat": {
+        "model_id": "meta-llama/Llama-3.2-1B-Instruct",
+        "task": "text-generation",
+        "device": -1
+    },
+    "hub_token": "**********"
+}'
